--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -10,14 +10,14 @@
             </p>
         </div>
         <div class="footer-social">
-            <a href="" target="_blank"
+            <a href="https://github.com/Edit-Mr/emblog" target="_blank"
                 ><img src="/static/img/github.svg" alt="GitHub"
             /></a>
-            <a href="" target="_blank"
+            <a href="https://www.instagram.com/emtech.cc/" target="_blank"
                 ><img
                     src="/static/img/instagram.svg"
                     alt="Instagram" /></a
-            ><a href="" target="_blank"
+            ><a href="/rss.xml" target="_blank"
                 ><img src="/static/img/rss.svg" alt="RSS"
             /></a>
         </div>
