--- a/static/style.css
+++ b/static/style.css
@@ -717,6 +717,15 @@ article .info {
 .info h3 {
     flex-grow: 1;
 }
+
+.info h3,
+.recent h3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 h3 {
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
@@ -1140,10 +1149,14 @@ blockquote::before {
 
 .code-block {
     background-color: #2e3440;
-    padding: 1.5rem 1.5rem 1.5rem 1rem;
     position: relative;
     border-radius: var(--border-radius);
     margin-bottom: 2rem;
+}
+
+.highlight {
+    overflow: scroll;
+    padding: 1.5rem 1.5rem 1.5rem 1rem;
 }
 
 .code-block button {
