--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -9,13 +9,13 @@
         <li><a href="/about">關於</a></li>
     </ul>
     <div class="right">
-        <a href="" target="_blank"
+        <a href="/random" target="_blank"
             ><img src="/static/img/dice.svg" alt="隨機文章"
         /></a>
-        <a href="" target="_blank"
+        <a href="https://github.com/Edit-Mr/emblog" target="_blank"
             ><img src="/static/img/github.svg" alt="GitHub"
         /></a>
-        <a href="" target="_blank"
+        <a href="https://www.instagram.com/emtech.cc" target="_blank"
             ><img src="/static/img/instagram.svg" alt="Instagram"
         /></a>
         <input type="checkbox" id="search-toggle" />
