--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -43,6 +43,7 @@
     </head>
     <body class="">
         {{nav}}
+        <input type="checkbox" id="hideTags">
         <div class="main-container post-page"></div>
         <div class="main-container home-page">{{home}}</div>
         {{footer}}
