--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -20,6 +20,7 @@
     </head>
     <body class="">
         {{nav}}
+        <input type="checkbox" id="hideTags">
         <div class="main-container post-page">{{post}}</div>
         <div class="main-container home-page">{{home}}</div>
         {{footer}}
