--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -24,7 +24,8 @@
         <a href="">啊我剛才 push 錯了! 如何在 Git 中撤銷提交</a>
     </h3>
 </div>
-<div id="tags">
+<div class="aside-tags">
+    <label for="hideTags" class="hideTagsLabel"></label>
     <h2>標籤</h2>
 </div>
 <div id="time">
