--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -5,9 +5,11 @@
     </div>
     <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
     <div class="about-links">
-        <a href=""><img src="/static/img/github-uwu.svg" alt="" /></a
-        ><a href=""><img src="/static/img/instagram.svg" alt="" /></a
-        ><a href="" class="about-rarr"
+        <a href="https://github.com/Edit-Mr/" target="_blank"
+            ><img src="/static/img/github-uwu.svg" alt="" /></a
+        ><a href="https://www.instagram.com/elvisdragonmao/" target="_blank"
+            ><img src="/static/img/instagram.svg" alt="" /></a
+        ><a href="https://elvismao.com" class="about-rarr" target="_blank"
             ><img src="/static/img/rarr.svg" alt=""
         /></a>
     </div>
