--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -99,6 +99,6 @@
             <h2>本系列其他文章</h2>
         </div>
     </main>
-    <h2 class="continue">繼續閱讀...</h2>
+    <h2 class="continue">繼續往下閱讀...</h2>
     <div class="next-post"></div>
 </div>
