--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -1,4 +1,4 @@
-<div class="post">
+<div class="post" data-id="{{postID}}">
     <header>
         <div class="post-header">
             <div class="header-tags">{{headerCategories}} {{headerTags}}</div>
