--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -7,7 +7,7 @@
     <div class="header-right">
         <div class="header-categories">
             <a href="" class="header-categories-item">軟體分享</a
-            ><a href="" class="header-categories-item">軟體分享</a
+            ><a href="/tags/CSS" class="header-categories-item">CSS</a
             ><a href="" class="header-categories-item">軟體分享</a
             ><a href="" class="header-categories-item">軟體分享</a>
         </div>
