--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -9,9 +9,7 @@
         <li><a href="/about">關於</a></li>
     </ul> -->
     <div class="right">
-        <a href="/random" target="_blank"
-            ><img src="/static/img/dice.svg" alt="隨機文章"
-        /></a>
+        <a href="/random"><img src="/static/img/dice.svg" alt="隨機文章" /></a>
         <a href="https://github.com/Edit-Mr/emblog" target="_blank"
             ><img src="/static/img/github.svg" alt="GitHub"
         /></a>
