--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -6,16 +6,19 @@
     </div>
     <div class="header-right">
         <div class="header-categories">
-            <a href="" class="header-categories-item">軟體分享</a
-            ><a href="/tags/CSS" class="header-categories-item">CSS</a
-            ><a href="" class="header-categories-item">軟體分享</a
-            ><a href="" class="header-categories-item">軟體分享</a>
+            <a href="/category/軟體分享" class="header-categories-item">軟體分享</a
+            ><a href="/tag/CSS" class="header-categories-item">CSS</a
+            ><a href="/category/網棧" class="header-categories-item">網棧</a
+            ><a href="/category/GitHub Actions" class="header-categories-item">GitHub Actions</a>
         </div>
         <a href=""> <div class="header-info"></div></a>
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
-                <img src="/static/img/thumbnail.webp" alt="" /></div
+                <img src="/static/img/thumbnail.webp" alt="" />
+                <div class="header-newPost-hover">
+                    <h3></h3>
+                </div></div
         ></a>
     </div>
 </header>
@@ -26,6 +29,7 @@
             <div id="categories"></div>
             <div class="categories-right" onclick="categoriesMove(1)"></div>
         </div>
+        <h2 class="categories-title">科技新聞</h2>
         <div id="posts"></div>
         <div class="more-post"></div>
     </section>
