--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -45,7 +45,9 @@
                     <div class="author-social">
                         <a href="https://github.com/Edit-Mr/" target="_blank"
                             ><img src="/static/img/github-uwu.svg" alt="" /></a
-                        ><a href="https://www.instagram.com/elvisdragonmao/" target="_blank"
+                        ><a
+                            href="https://www.instagram.com/elvisdragonmao/"
+                            target="_blank"
                             ><img src="/static/img/instagram.svg" alt=""
                         /></a>
                     </div>
@@ -75,17 +77,18 @@
                         href="https://x.com/intent/tweet?text={{title}}&url=https://emtech.cc/p/{{postID}}&tw_p=tweetbutton"
                         target="_blank"
                         ><img src="/static/img/x.svg" alt="" /></a
-                    ><a href=""><img
-                        src="/static/img/link.svg"
-                        alt=""
-                        onclick="navigator.clipboard.writeText(window.location.href).then(() => { 
+                    ><a href=""
+                        ><img
+                            src="/static/img/link.svg"
+                            alt=""
+                            onclick="navigator.clipboard.writeText(window.location.href).then(() => { 
                             const img = this;
                             img.src = '/static/img/check.svg';
                             setTimeout(() => {
                                 img.src = '/static/img/link.svg';
                             }, 3000);
                         })"
-                        title="複製連結"
+                            title="複製連結"
                     /></a>
                 </div>
                 <div class="toc">
@@ -96,6 +99,7 @@
         </aside>
         <div class="related-posts">
             <h2>本系列其他文章</h2>
+            <div></div>
         </div>
     </main>
     <h2 class="continue">繼續往下閱讀...</h2>
