--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -5,17 +5,17 @@
         {{meta}}
         <meta
             name="description"
-            content="毛哥EM資訊密技，提供最新的資訊技術文章與教學。"
+            content="發明、技術文章與科技教學。"
         />
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
 
-        <meta name="og:title" content="The Rock" />
-        <meta name="og:url" content="http://www.imdb.com/title/tt0117500/" />
-        <meta name="og:image" content="http://ia.media-imdb.com/rock.jpg" />
+        <meta name="og:title" content="毛哥EM資訊密技" />
+        <meta name="og:url" content="https://emtech.cc" />
+        <!-- <meta name="og:image" content="" /> -->
         <meta
             name="og:description"
-            content="A group of U.S. Marines, under command of..."
+            content="發明、技術文章與科技教學。"
         />
         <script type="application/ld+json">
             {
@@ -26,7 +26,7 @@
                 "logo": "https://emtech.cc/static/img/EMprofile.png",
                 "name": "毛哥EM資訊密技",
                 "alternateName": ["毛哥EM", "emtech"],
-                "description": "毛哥EM資訊密技，提供最新的資訊技術文章與教學。",
+                "description": "發明、技術文章與科技教學。",
                 "email": "info@elvismao.com",
                 "contactPoint": {
                     "@type": "ContactPoint",
