--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
     <head>
-        <title>emtech</title>
+        <title>{{title}} | 毛哥EM資訊密技</title>
         {{meta}}
-        <meta
-            name="description"
-            content="毛哥EM資訊密技，提供最新的資訊技術文章與教學。"
-        />
+        <meta name="description" content="{{description}}" />
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
 
-        <meta name="og:title" content="The Rock" />
-        <meta name="og:url" content="http://www.imdb.com/title/tt0117500/" />
-        <meta name="og:image" content="http://ia.media-imdb.com/rock.jpg" />
-        <meta
-            name="og:description"
-            content="A group of U.S. Marines, under command of..."
-        />
+        <meta name="og:title" content="{{title}}" />
+        <meta name="og:url" content="https://emtech.cc/p/{{id}}" />
+        <meta name="og:image" content="{{thumbnail}}" />
+        <meta name="og:description" content="{{description}}" />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "WebSite", // "@type": "NewsArticle",
+                "name": "毛哥EM資訊密技",
+                "alternateName": ["毛哥EM", "emtech"],
+                "url": "https://emtech.cc",
+                "speakable": {
+                    "@type": "SpeakableSpecification",
+                    "cssSelector": [".post-container"]
+                },
+                "headline": "{{title}}",
+                "image": ["{{thumbnail}}"],
+                "datePublished": "{{date}}",
+                "dateModified": "{{lastUpdated}}",
+                "author": [
+                    {
+                        "@type": "Person",
+                        "name": "毛哥EM",
+                        "url": "https://elvismao.com"
+                    }
+                ],
+                "publisher": {
+                    "name": "毛哥EM資訊密技",
+                    "url": "https://emtech.cc"
+                }
+            }
+        </script>
     </head>
     <body class="">
         {{nav}}
-        <input type="checkbox" id="hideTags">
+        <input type="checkbox" id="hideTags" />
         <div class="main-container post-page">{{post}}</div>
         <div class="main-container home-page">{{home}}</div>
         {{footer}}
