--- a/view/partials/meta.html
+++ b/view/partials/meta.html
@@ -27,3 +27,23 @@
 <meta name="msapplication-TileColor" content="#2d89ef" />
 <meta name="msapplication-config" content="/static/icons/browserconfig.xml" />
 <meta name="theme-color" content="#8b9bcc" />
+
+<!-- Google tag (gtag.js) -->
+<script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-H69XEEC798"
+></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-H69XEEC798");
+</script>
+<script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9975357988525791"
+    crossorigin="anonymous"
+></script>
