--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -1,16 +1,16 @@
 <div class="about">
     <div class="about-name">
-        <img src="/static/img/EMprofile.png" alt="" />
+        <img src="/static/img/EMprofile.png" alt="Elvis Mao" />
         毛哥EM
     </div>
     <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
     <div class="about-links">
-        <a href="https://github.com/Edit-Mr/" target="_blank"
-            ><img src="/static/img/github-uwu.svg" alt="" /></a
-        ><a href="https://www.instagram.com/elvisdragonmao/" target="_blank"
-            ><img src="/static/img/instagram.svg" alt="" /></a
-        ><a href="https://elvismao.com" class="about-rarr" target="_blank"
-            ><img src="/static/img/rarr.svg" alt=""
+        <a href="https://github.com/Edit-Mr/" target="_blank" aria-label="GitHub"
+            ><img src="/static/img/github-uwu.svg" alt="GitHub" /></a
+        ><a href="https://www.instagram.com/elvisdragonmao/" target="_blank" aria-label="Instagram"
+            ><img src="/static/img/instagram.svg" alt="Instagram" /></a
+        ><a href="https://elvismao.com" class="about-rarr" target="_blank" aria-label="About"
+            ><img src="/static/img/rarr.svg" alt="About"
         /></a>
     </div>
 </div>
