--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -1,4 +1,4 @@
-<a href="https://dc.elvismao.com">
+<a href="https://dc.elvismao.com" aria-label="Join Discord" target="_blank"></a>
     <div class="discord-join">
         <img src="/static/img/discord.svg" class="discord-float" />
         <img src="/static/img/discord.svg" class="discord-float" />
