--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -9,11 +9,19 @@
         <li><a href="/about">關於</a></li>
     </ul> -->
     <form id="searchForm" class="right">
-        <a href="/random" class="random"><img src="/static/img/dice.svg" alt="隨機文章" /></a>
-        <a href="https://github.com/Edit-Mr/emblog" target="_blank"
+        <a href="/random" class="random" aria-label="隨機文章"
+            ><img src="/static/img/dice.svg" alt="隨機文章"
+        /></a>
+        <a
+            href="https://github.com/Edit-Mr/emblog"
+            target="_blank"
+            aria-label="GitHub"
             ><img src="/static/img/github.svg" alt="GitHub"
         /></a>
-        <a href="https://www.instagram.com/emtech.cc" target="_blank"
+        <a
+            href="https://www.instagram.com/emtech.cc"
+            target="_blank"
+            aria-label="Instagram"
             ><img src="/static/img/instagram.svg" alt="Instagram"
         /></a>
         <input type="checkbox" id="search-toggle" />
