--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -1,8 +1,8 @@
 <a href="https://dc.elvismao.com" aria-label="Join Discord" target="_blank"></a>
     <div class="discord-join">
-        <img src="/static/img/discord.svg" class="discord-float" />
-        <img src="/static/img/discord.svg" class="discord-float" />
-        <img src="/static/img/discord.svg" class="discord-float" />
+        <img src="/static/img/discord.svg" class="discord-float" alt="" />
+        <img src="/static/img/discord.svg" class="discord-float" alt="" />
+        <img src="/static/img/discord.svg" class="discord-float" alt="" />
 
         <h2>遇到問題嗎?</h2>
         <p>歡迎加入 Discord 與我們一起討論。</p>
