--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -6,16 +6,21 @@
     </div>
     <div class="header-right">
         <div class="header-categories">
-            <a href="/category/軟體分享" class="header-categories-item">軟體分享</a
-            ><a href="/tag/CSS" class="header-categories-item">CSS</a
-            ><a href="/category/網棧" class="header-categories-item">網棧</a
-            ><a href="/category/GitHub Actions" class="header-categories-item">GitHub Actions</a>
+            <a href="/category/軟體分享" class="header-categories-item"
+                ><span>軟體分享</span></a
+            ><a href="/tag/CSS" class="header-categories-item"
+                ><span>CSS</span></a
+            ><a href="/category/網棧" class="header-categories-item"
+                ><span>網棧</span></a
+            ><a href="/category/GitHub Actions" class="header-categories-item"
+                ><span>GitHub Actions</span></a
+            >
         </div>
-        <a href=""> <div class="header-info"></div></a>
+        <a href="" aria-label="最新文章"><div class="header-info"></div></a>
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
-                <img src="/static/img/thumbnail.webp" alt="" />
+                <img src="" alt="" />
                 <div class="header-newPost-hover">
                     <h3></h3>
                 </div></div
