--- a/view/partials/meta.html
+++ b/view/partials/meta.html
@@ -29,7 +29,7 @@
 <meta name="theme-color" content="#8b9bcc" />
 
 <!-- Google tag (gtag.js) -->
-<!-- <script
+<script
     async
     src="https://www.googletagmanager.com/gtag/js?id=G-H69XEEC798"
 ></script>
@@ -46,4 +46,4 @@
     async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9975357988525791"
     crossorigin="anonymous"
-></script> -->
+></script>
