--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -4,19 +4,25 @@
         <div class="footer-text">
             <p class="copyright">©2021 - 2024 By 毛哥EM</p>
             <p>
-                毛哥EM資訊密技使用毛哥EM設計與開發的 emblog
-                靜態網頁生成器生成。<br />原創文章採 CC BY
+                毛哥EM資訊密技使用 emblog 生成。<a href="/post/emblog"
+                    >了解更多...</a
+                >
+                <br />原創文章採 CC BY
                 授權，轉載請註明來源。部分圖片取自網路，若有侵權請與作者聯絡。
             </p>
         </div>
         <div class="footer-social">
-            <a href="https://github.com/Edit-Mr/emblog" target="_blank" aria-label="GitHub"
+            <a
+                href="https://github.com/Edit-Mr/emblog"
+                target="_blank"
+                aria-label="GitHub"
                 ><img src="/static/img/github.svg" alt="GitHub"
             /></a>
-            <a href="https://www.instagram.com/emtech.cc/" target="_blank" aria-label="Instagram"
-                ><img 
-                    src="/static/img/instagram.svg"
-                    alt="Instagram" /></a
+            <a
+                href="https://www.instagram.com/emtech.cc/"
+                target="_blank"
+                aria-label="Instagram"
+                ><img src="/static/img/instagram.svg" alt="Instagram" /></a
             ><a href="/rss.xml" target="_blank" aria-label="RSS"
                 ><img src="/static/img/rss.svg" alt="RSS"
             /></a>
