--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -6,10 +6,9 @@
         <meta name="description" content="發明、技術文章與科技教學。" />
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
-
         <meta name="og:title" content="毛哥EM資訊密技" />
         <meta name="og:url" content="https://emtech.cc" />
-        <!-- <meta name="og:image" content="" /> -->
+        <meta name="og:image" content="https://emtech.cc/static/img/og.webp" />
         <meta name="og:description" content="發明、技術文章與科技教學。" />
         <script type="application/ld+json">
             {
