continue on error

--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -1,4 +1,4 @@
-<a href="https://dc.elvismao.com" aria-label="Join Discord" target="_blank"></a>
+<a href="https://dc.elvismao.com" aria-label="Join Discord" target="_blank">
     <div class="discord-join">
         <img src="/static/img/discord.svg" class="discord-float" alt="" />
         <img src="/static/img/discord.svg" class="discord-float" alt="" />
@@ -6,10 +6,9 @@
 
         <h2>遇到問題嗎？</h2>
         <p>歡迎加入 Discord 與我們一起討論。</p>
-    </div></a
->
-<div class="recent">
-</div>
+    </div>
+</a>
+<div class="recent"></div>
 <div class="aside-tags">
     <label for="hideTags" class="hideTagsLabel"></label>
     <h2>標籤</h2>
