--- a/view/pages/404.html
+++ b/view/pages/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
     <head>
         <title>找不到頁面 | 毛哥EM資訊密技</title>
@@ -16,7 +16,8 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                flex-grow: 1;text-align: center;
+                flex-grow: 1;
+                text-align: center;
             }
         </style>
     </head>
@@ -27,7 +28,7 @@
             <p>
                 你說你不想在這裡 我也不想在這裡
                 <br />於是轉身向<a href="/">首頁</a>走去
-                <br>
+                <br />
                 -- 《草東沒有頁面》
             </p>
             <div class="code">
