--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -5,11 +5,21 @@
     </div>
     <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
     <div class="about-links">
-        <a href="https://github.com/Edit-Mr/" target="_blank" aria-label="GitHub"
+        <a
+            href="https://github.com/Edit-Mr/"
+            target="_blank"
+            aria-label="GitHub"
             ><img src="/static/img/github-uwu.svg" alt="GitHub" /></a
-        ><a href="https://www.instagram.com/elvisdragonmao/" target="_blank" aria-label="Instagram"
+        ><a
+            href="https://www.instagram.com/elvisdragonmao/"
+            target="_blank"
+            aria-label="Instagram"
             ><img src="/static/img/instagram.svg" alt="Instagram" /></a
-        ><a href="https://elvismao.com" class="about-rarr" target="_blank" aria-label="About"
+        ><a
+            href="https://elvismao.com"
+            class="about-rarr"
+            target="_blank"
+            aria-label="About"
             ><img src="/static/img/rarr.svg" alt="About"
         /></a>
     </div>
