--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -6,13 +6,15 @@
     </div>
     <div class="header-right">
         <div class="header-categories">
-            <a href="/category/軟體分享" class="header-categories-item">軟體分享</a
+            <a href="/category/軟體分享" class="header-categories-item"
+                >軟體分享</a
             ><a href="/tag/CSS" class="header-categories-item">CSS</a
             ><a href="/category/網棧" class="header-categories-item">網棧</a
-            ><a href="/category/GitHub Actions" class="header-categories-item">GitHub Actions</a>
+            ><a href="/category/GitHub Actions" class="header-categories-item"
+                >GitHub Actions</a
+            >
         </div>
-        <a href="" aria-label="最新文章"
-        ><div class="header-info"></div></a>
+        <a href="" aria-label="最新文章"><div class="header-info"></div></a>
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
