--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -32,11 +32,16 @@
                 },
                 "sameAs": ["https://www.instagram.com/emtech.cc/"],
                 "mainEntity": {
-                    "@type": "WebPage",
-                    "@id": "https://emtech.cc/",
-                    "name": "毛哥EM資訊密技首頁",
-                    "description": "發明、技術文章與科技教學的個人部落格。"
-                }
+                    "@type": "Organization",
+                    "name": "毛哥EM資訊密技",
+                    "alternateName": "毛哥EM",
+                    "description": "發明、技術文章與科技教學。",
+                    "image": "https://emtech.cc/static/img/EMprofile.png",
+                    "sameAs": [
+                      "https://www.instagram.com/emtech.cc"
+                    ]
+                  }
+            
             }
         </script>
     </head>
