--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -13,7 +13,7 @@
             ><img src="/static/img/dice.svg" alt="隨機文章"
         /></a>
         <a
-            href="https://github.com/Edit-Mr/emblog"
+            href="https://github.com/Edit-Mr/emtech"
             target="_blank"
             aria-label="GitHub"
             ><img src="/static/img/github.svg" alt="GitHub"
