--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -4,6 +4,7 @@
             <h1>毛哥EM<span>資訊密技</span></h1>
         </div>
     </div>
+    <div class="helloween"></div>
     <div class="header-right">
         <div class="header-categories">
             <a href="/category/軟體分享" class="header-categories-item"
