我向我看齊 於是一直往下去 #11

--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -37,11 +37,8 @@
                     "alternateName": "毛哥EM",
                     "description": "發明、技術文章與科技教學。",
                     "image": "https://emtech.cc/static/img/EMprofile.png",
-                    "sameAs": [
-                      "https://www.instagram.com/emtech.cc"
-                    ]
-                  }
-            
+                    "sameAs": ["https://www.instagram.com/emtech.cc"]
+                }
             }
         </script>
     </head>
